--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cloudinary": "^1.23.0",
     "connect-mongo": "^3.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.11.8"
+    "mongoose": "^5.11.8",
+    "multer": "^1.4.2"
   }
 }
